# Small_Autonomous_Mobile_Robot

./: .gitignore  Kurse.md  Ping_Pong_Application.md  README.md
001_Micro_ROS/01_Serial_connection_ESP32S_to_PC/: main.cpp  platformio.ini
001_Micro_ROS/02_WiFi_Connection_ESP32S_to_PC/: main.cpp  platformio.ini
001_Micro_ROS/03_Differential_Drive_Robot_ESP32/: main.cpp
Datasheet/: Lidar_data.md  readme.md
ESP32-based robot/: readme.md
ESP32-based robot/03_Differential_Drive_Robot_ESP32/: platformio.ini
ESP32-based robot/04_IMU_sensor_added/: main.cpp
ESP32-based robot/05_Encoder_added/: main.cpp
ESP32-based robot/06_Watchdog_Safety_Feature/: Readme.md  main.cpp
ESP32-based robot/10_Final_Code/: main.cpp  main2.cpp  platformio.ini
First_Application/: Ping_Pong.md  Readme.md
First_micro-ROS_Application_on_Linux/: Readme.md
First_micro-ROS_Application_on_an_RTOS/: readme.md
Mechanical/: CAD&STL_Caster_Wheel_Spacer_filesreadme.md
Mechanical/CAD&STL_Caster_Wheel_Spacer_files/: Caster_Wheel_Spacer.SLDPRT  Caster_Wheel_Spacer.STL
Mechanical_Drawings/: readme.md
Mechanical_Drawings/CAD&STL_Caster_Wheel_Spacer_files/: readme.md
Programming with rcl and rclc/: readme.md
RTOS/: readme.md
ros2_ws/maps/: test_map.pgm  test_map.yaml
ros2_ws/src/wheel_odometry/: CMakeLists.txt  package.xml
ros2_ws/src/wheel_odometry/config/: ekf.yaml  nav2_params.yaml  odom_params.yaml  slam_params.yaml
ros2_ws/src/wheel_odometry/launch/: mapping.launch.py  navigation.launch.py  robot_base.launch.py  static_transforms.launch.py
ros2_ws/src/wheel_odometry/src/: scan_restamper.cpp  wheel_odometry_node.cpp
